First Big Rewrite (components)

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,9 +1,18 @@
 <img src="<%= require('./logo.svg') %>">
-<h2>Populate Calendar</h2>
-<h4>Make sure you have a group <br>called <b>'week-item'</b> or <b>'week-item-sunday'</b></h4>
-<h4>This plugin changes these layers: <br>- text layers named <b>'day'</b> or <b>'month'</b><br>- rectangle named <b>'background'</b></h4>
-<p>Starts: <input type="date" id="date"></p>
-<p>Weeks: <input id="weeks" value="12"></p>
-<!-- <p>No. of days: <select><option value="5">5</option><option selected value="6">6</option><option value="7">7</option></select></p> -->
-<button id="create">Generate</button>
-<button id="cancel">Cancel</button>
+<h2>IDEO Calendar Now ⚡️</h2>
+<div class="flex">
+    <div>
+        <p>Starts on week</p>
+        <input type="date" id="date">
+    </div>
+    <div>
+        <p>Weeks</p>
+        <input id="weeks" value="12">
+    </div>
+</div>
+<h4><b>Make sure you have created your components and edited them before building your calendar.</b></h4>
+<h4>This plugin changes these component layers: <br>- Text layers named <b>'day'</b> or <b>'month'</b><br>- Rectangle layers named <b>'background'</b> (opacity)</h4>
+<div class="flex">
+    <button id="create">1 - Create Components</button>
+    <button id="generate">2 - Build Calendar</button>
+</div>
