--- a/src/ui.html
+++ b/src/ui.html
@@ -1,18 +1,21 @@
-<img src="<%= require('./logo.svg') %>">
-<h2>IDEO Calendar Now ⚡️</h2>
-<div class="flex">
+<form id="form" class="flex wrapper">
     <div>
         <p>Starts on week</p>
-        <input type="date" id="date">
+        <input required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))" type="date" id="date">
     </div>
     <div>
         <p>Weeks</p>
-        <input id="weeks" value="12">
+        <input required min="1" max="99" pattern="[+]?[0-9][1-9]" type="number" id="weeks" value="12">
+    </div>
+</form>
+<div id="readmore" class="wrapper">
+    <h6>More Info +</h6>
+    <div id="readmore-inner" class="collapsed">
+        <h4><b>Create the components first, then start building your calendar. <br>If you change their size afterwards, just rebuild. </b></h4>
+        <h4>The plugin can change these component layers: <br>- The text layers <b>'day', 'week'</b> and <b>'month'</b><br>- Rectangle layers named <b>'background'</b> (opacity)</h4>
     </div>
 </div>
-<h4><b>Make sure you have created your components and edited them before building your calendar.</b></h4>
-<h4>This plugin changes these component layers: <br>- Text layers named <b>'day'</b> or <b>'month'</b><br>- Rectangle layers named <b>'background'</b> (opacity)</h4>
-<div class="flex">
+<div class="flex wrapper">
     <button id="create">1 - Create Components</button>
-    <button id="generate">2 - Build Calendar</button>
+    <button id="generate" disabled>2 - Build Calendar</button>
 </div>
