color styles support

--- a/src/ui.html
+++ b/src/ui.html
@@ -12,7 +12,7 @@
     <h6>More Info +</h6>
     <div id="readmore-inner" class="collapsed">
         <h4><b>Create the components first, then start building your calendar. <br>If you change their size afterwards, just rebuild. </b></h4>
-        <h4>The plugin can change these component layers: <br>- The text layers <b>'day', 'week'</b> and <b>'month'</b><br>- Rectangle layers named <b>'background'</b> (opacity)</h4>
+        <h4>The plugin can change these component layers: <br>- The text layers <b>'day', 'week'</b> and <b>'month'</b><br>- Rectangle layers named <b>'background'</b> (Color Style)</h4>
     </div>
 </div>
 <div class="flex wrapper">
