consistent terminology and updated readme

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,4 +1,4 @@
-<button id="create">Build Components</button>
+<button id="build">Build Components</button>
 <hr>
 <div id="step2" class="disabled">
     <form id="form">
@@ -10,9 +10,9 @@
     <div id="readmore" class="wrapper">
         <h6>More Info +</h6>
         <div id="readmore-inner" class="collapsed">
-            <h4><b>Create the components first</b>, then start building your calendar. If you change their size afterwards, <b>just rebuild again</b>.</h4>
-            <h4>Change the background colors with the generated <b>local color styles</b>. Deselect any layers to easily edit them.</h4>
+            <h4><b>Build the components first</b>, then start creating your calendar. If you change their size afterwards, <b>just create another</b>.</h4>
+            <h4>Change the background colors with the new <b>local color styles</b>. Deselect any layers to easily edit them.</h4>
         </div>
     </div>
-    <button id="generate">Create Calendar</button>
+    <button id="create">Create Calendar</button>
 </div>
